# dice-engine

./: README.md  cli.py  parser.py  pyproject.toml
src/: cli.py  dice.py  tokenizer.py
src/dice_engine_andersonstv/: cli.py  dice_roller.py  pretty_print.py
