[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dice_engine_andersonstv"
version = "0.1"
authors = [
  { name="Anderson Santos", email="anderson.santsv+gh@gmail.com" },
]
description = "An engine for handling dice expresions"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/andersonstv/dice-engine"
"Bug Tracker" = "https://github.com/andersonstv/dice-engine/issues"

